<resources>
    <string name="app_name" translatable="false">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="scuttered_clouds">Scuttered Clouds</string>
    <string name="max_min_temp">255 / 255°k</string>
    <string name="temperature_degree">29</string>
    <string name="temperature_unit">°C</string>
    <string name="time">12 PM</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">SunRise</string>
    <string name="sunset">SunSet</string>
    <string name="behira_governrate">Behira Governrate</string>
    <string name="main_date">21 Mars 2024</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>
    <string name="title">Delete Favorite</string>
    <string name="message">Are you sure you want to delete this favorite?</string>
    <string name="save">Save</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="cancel">Cancel</string>
    <string name="done">OK</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="delete_alert">\"Are you sure!\nYou want to dismiss this item ?\"</string>
    <string name="unknown">UnKnown</string>
    <string name="no_places">No Favourite Places</string>
    <string name="alexandria"> Alexandria</string>
    <string name="no_alerts">No Alerts</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="language">Language</string>
    <string name="notifications">Notification</string>
    <string name="temperature">Temerature</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="day_title">Select Alert Date</string>
    <string name="time_title">Select Alert Time</string>
    <string name="add_alarm">Add Alaram</string>
    <string name="_3_58_am">1:53 Am</string>
    <string name="_16_may_2024">16 Mars 2024</string>
    <string name="notification">Notification</string>
    <string name="dismiss">Dissmiss</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="degree">Degree</string>
    <string name="speed">Speed</string>
    <string name="feels" />
    <string name="feels_like">Feels like</string>
    <string name="wind">Wind</string>
    <string name="hour_forecast">Hourly Forecast</string>
    <string name="day_forecast">Daily Forecast</string>
    <string name="gps">GPS</string>
    <string name="celsius_unit">°C</string>
    <string name="kelvin_unit">°K</string>
    <string name="frehirnit_unit">°F</string>
    <string name="meter_hour">mph</string>
    <string name="mile_second">mps</string>
    <string name="pressure_unit">hpa</string>
    <string name="visibility_unit">" m"</string>
    <string name="meter_sec">Meter/Second</string>
    <string name="mile_hour">Mile/Hour</string>
</resources>