<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dailyContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:background="@drawable/daily_item_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvDailyWeekDay"
        style="@style/TextStyleDailyItem"
        android:text="@string/tomorrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDailyIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvDailyDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDailyDescription"
        style="@style/TextStyleDailyItem"
        android:layout_marginEnd="8dp"
        android:text="@string/scuttered_clouds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvDailyMaxMinTemp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDailyMaxMinTemp"
        style="@style/TextStyleDailyItem"
        android:text="@string/max_min_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>