<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/light_blue"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:strokeWidth="@dimen/zero_dimens">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/padding_small">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_alarm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"
            android:fontFamily="@font/cairo_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_alertDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:rippleColor="@color/blue"
            app:strokeWidth="@dimen/zero_dimens">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_large"
                android:paddingVertical="@dimen/padding_large"
                >

                <TextView
                    android:id="@+id/tv_alertTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_58_am"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_medium"
                    android:fontFamily="@font/cairo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_alertDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_16_may_2024"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_small"
                    android:fontFamily="@font/cairo"
                    app:layout_constraintEnd_toEndOf="@id/tv_alertTime"
                    app:layout_constraintStart_toStartOf="@id/tv_alertTime"
                    app:layout_constraintTop_toBottomOf="@id/tv_alertTime" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_giant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_alertDate">

            <RadioButton
                android:id="@+id/btn_alert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="@dimen/padding_large"
                android:text="@string/alert"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/btn_notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:checked="true"
                />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveAlert"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/card_background"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelDialog"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/card_background"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <ImageView
            android:id="@+id/iv_loading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/ic_alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>

